
message ProcessesMessage
{
	message ProcessMessage
	{
		required string processname = 1;
		required uint32 pid = 2;
		required double userCpuLoad = 3;
		required double systemCpuLoad = 4;
	}
	repeated ProcessMessage processmessage = 1;
}